--- a/src/components/Weather/Weather.module.css
+++ b/src/components/Weather/Weather.module.css
@@ -1,19 +1,47 @@
 .table_weather,
-thead,
-td,
-th {
+.thead_weather,
+.tr_weather,
+.tr_weather td {
     font-size: 12px;
+    font-weight: 500;
+    padding-left: 2px;
+    padding-right: 2px;
 }
-.datetime {
-    font-size: 10px;
+.table_weather  {
+    border-radius: 10px;
+    border: 2px solid black;
 }
-td,th{
-    width:100px;
+.thead_weather{
+    column-gap: 2px;
 }
 td.description,
 th.description {
     font-size: 10px;
+    min-width: 130px;
 }
 svg{
     width: 20px;
+}
+.title_weather{
+    font-size: 20px;
+    font-weight: 700;
+    font-family:Arial, Helvetica, sans-serif;
+    font-style:inherit;
+    padding-bottom: 10px;
+}
+.tr_weather:nth-child(even) :hover {
+    border: 2px solid rgb(242, 234, 243);
+    cursor: pointer;
+}
+.tr_weather:nth-child(odd) :hover {
+    border: 2px solid #6e7070;
+    cursor: pointer;
+}
+.tr_weather:nth-child(even) {
+    background-color: #6e7070;
+    color: white;
+  }
+.tr_weather td {
+    text-align: center;
+    border: 1px solid grey;
 }
