--- a/src/components/Busshadule/Busshadule.module.css
+++ b/src/components/Busshadule/Busshadule.module.css
@@ -1,24 +1,26 @@
-.caption {
+.busshadule__caption {
     font-weight: 500;
 }
-table,td {
+.busshadule__table, 
+.busshadule__tr td {
     font-size: 16px;
     border: 1px solid grey;
     text-align:center;
   } 
-thead {
+.busshadule__thead {
     font-size: 20px;
     column-gap: 5px;
   }
-td {
+.busshadule__tr td {
     padding-left: 10px;
     padding-right: 10px;
 }
 @media screen and (max-width: 320px) {
-  table,td {
+  .busshadule__table,
+  .busshadule__tr td {
     font-size: 12px;
   } 
-  thead{
+  .busshadule__thead{
   font-size: 14px;
   }
 }
