--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import-normalize; /* bring in normalize.css styles */
-
+:where(html) {
+  width: fit-content;
+  width: -moz-fit-content
+}
 body {
   margin: 0;
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +16,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#popup-root {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  height: 100%;
+}
+#popup-root.is-hide{
+  display: none
+}
+svg{
+  width: 50px;
 }
