--- a/src/components/Busshadule/Busshadule.module.css
+++ b/src/components/Busshadule/Busshadule.module.css
@@ -1,5 +1,7 @@
 .busshadule__caption {
     font-weight: 500;
+    font-size: 16px;
+    padding-bottom: 10px;
 }
 .busshadule__table, 
 .busshadule__tr td {
