--- a/src/components/Servises/Servises.module.css
+++ b/src/components/Servises/Servises.module.css
@@ -1,35 +1,35 @@
-.table_goods,
-.thead_goods,
-.tr_goods,
-.tr_goods td {
+.table_servises,
+.thead_servises,
+.tr_servises,
+.tr_servises td {
     font-size: 12px;
     font-weight: 500;
     padding-left: 2px;
     padding-right: 2px;
 }
-.table_goods  {
+.table_servises  {
     border-radius: 10px;
     border: 2px solid black;
 }
-.thead_goods{
+.thead_servises{
     column-gap: 2px;
 }
-.title_goods{
+.title_servises{
     font-size: 20px;
     font-weight: 700;
     font-family:Arial, Helvetica, sans-serif;
     font-style:inherit;
     padding-bottom: 10px;
 }
-.tr_goods:nth-child(even) {
+.tr_servises:nth-child(even) {
     background-color: #6e7070;
     color: white;
   }
-.tr_goods td {
+.tr_servises td {
     text-align: center;
     border: 1px solid grey;
 }
-.section__goods{
+.section__servises{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -37,22 +37,22 @@
     align-items: center;
     padding: 10px 10px;
 }
-.labelTable_goods {
+.labelTable__servises {
     font-size: 16px;
     padding: 0 10px;
     font-weight: 600;
 }
 @media screen and (max-width: 319.9px) {
-    .labelTable_goods{
+    .labelTable__servises{
     font-size: 10px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
-    .labelTable_goods{
+    .labelTable__servises{
     font-size: 14px;
     }
 }
-.select__container__goods{
+.select__container__servises{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
