--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 body {
   margin: 0;
+  width: 100vw;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
