--- a/src/components/Goods/Goodsa.module.css
+++ b/src/components/Goods/Goodsa.module.css
@@ -15,7 +15,7 @@
     column-gap: 2px;
 }
 .title_goods{
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 700;
     font-family:Arial, Helvetica, sans-serif;
     font-style:inherit;
@@ -28,6 +28,7 @@
 .tr_goods td {
     text-align: center;
     border: 1px solid grey;
+    padding: 5px;
 }
 .section__goods{
     display: flex;
@@ -35,25 +36,52 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px 10px;
+    padding-bottom: 10px;
 }
 .labelTable_goods {
-    font-size: 16px;
+    font-size: 24px;
     padding: 0 10px;
     font-weight: 600;
 }
 @media screen and (max-width: 319.9px) {
     .labelTable_goods{
-    font-size: 10px;
+    font-size: 20px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
     .labelTable_goods{
-    font-size: 14px;
+    font-size: 24px;
     }
+}
+.select__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .select__container__goods{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: bisque;
 }
+.select__container__goods select {
+    background-color: #0563af;
+    color: white;
+    padding: 4px;
+    width: 250px;
+    border: none;
+    font-size: 20px;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+    -webkit-appearance: button;
+    appearance: button;
+    outline: none;
+    border-radius: 8px;
+  }
+
+  .select__container__goods:hover::before {
+    color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  .select__container__goods select option {
+    padding: 30px;
+  }
