--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -11,20 +11,43 @@ select {
     padding: 2px;
 }
 .labelTable {
-    font-size: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
     padding: 0 10px;
 }
 @media screen and (max-width: 319.9px) {
     .labelTable{
-    font-size: 10px;
+    font-size: 14px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
     .labelTable{
-    font-size: 14px;
+    font-size: 20px;
     }
 }
 .select__container{
     display: flex;
     justify-content: center;
 }
+.select__container select {
+    background-color: #0563af;
+    color: white;
+    padding: 4px;
+    width: 250px;
+    border: none;
+    font-size: 20px;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+    -webkit-appearance: button;
+    appearance: button;
+    outline: none;
+    border-radius: 8px;
+  }
+
+  .select__container:hover::before {
+    color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  .select__container select option {
+    padding: 30px;
+  }
