--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,5 +1,18 @@
 .menu {
-    width: 200px;
+    max-width: 180px;
+    min-width: 180px;
+    display: flex;
+    flex-direction: column;
     padding: 10px;
     height: 100vh;
+    border-right: 2px solid black;
+    background-color: rgba(0,0,0,0.3);
+}
+.menu a {
+    text-align: center;
+    margin: 10px 0;
+}
+h3 {
+    text-align: center;
+    color: white;
 }
