--- a/src/components/Servises/Servises.module.css
+++ b/src/components/Servises/Servises.module.css
@@ -62,6 +62,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    min-width: 100%;
 }
 .select__container__servises {
     display: flex;
@@ -89,4 +90,8 @@
   .select__container__servises select option {
     padding: 30px;
   }
-  
+  a {
+    text-decoration: none;
+    font-size: 14px;
+    color:goldenrod;
+  }
