--- a/src/components/Weather/Weather.module.css
+++ b/src/components/Weather/Weather.module.css
@@ -29,8 +29,8 @@ th.description {
     font-size: 10px;
     min-width: 130px;
 }
-svg{
-    width: 20px;
+img{
+    width: 50px;
 }
 .title_weather{
     font-size: 20px;
