--- a/src/components/Goods/Goodsa.module.css
+++ b/src/components/Goods/Goodsa.module.css
@@ -15,7 +15,7 @@
     column-gap: 2px;
 }
 .title_goods{
-    font-size: 28px;
+    font-size: 16px;
     font-weight: 700;
     font-family:Arial, Helvetica, sans-serif;
     font-style:inherit;
@@ -39,19 +39,9 @@
     padding-bottom: 10px;
 }
 .labelTable_goods {
-    font-size: 24px;
+    font-size: 16px;
     padding: 0 10px;
     font-weight: 600;
-}
-@media screen and (max-width: 319.9px) {
-    .labelTable_goods{
-    font-size: 20px;
-    }
-}
-@media screen and (min-width: 320px) and (max-width: 480px) {
-    .labelTable_goods{
-    font-size: 24px;
-    }
 }
 .select__container {
     display: flex;
@@ -64,6 +54,8 @@
     justify-content: center;
     background-color: bisque;
     min-width: 100%;
+    align-items: center;
+    flex-direction: column;
 }
 .select__container__goods select {
     background-color: #0563af;
@@ -71,7 +63,7 @@
     padding: 4px;
     width: 250px;
     border: none;
-    font-size: 20px;
+    font-size: 16px;
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
     -webkit-appearance: button;
     appearance: button;
@@ -91,3 +83,33 @@
     font-size: 14px;
     color:goldenrod;
   }
+@media screen and (max-width: 319.9px) {
+    .labelTable_goods {
+        display: flex;
+        text-align: center;
+        font-size: 10px;
+        padding-left: 20px;
+        padding-bottom: 0;
+        margin: 0;
+        flex-direction: column;
+    }
+    .select__container__goods select {
+        font-size: 10px; 
+        max-width: 200px;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 540px) {
+    .labelTable_goods {
+        display: flex;
+        text-align: center;
+        font-size: 14px;
+        padding-left: 20px;
+        padding-bottom: 0;
+        margin: 0;
+        flex-direction: column;
+    }
+    .select__container__goods select {
+        font-size: 14px; 
+        max-width: 200px;
+    }
+}
