--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -7,6 +7,7 @@
     height: 100vh;
     border-right: 2px solid black;
     background-color: rgba(0,0,0,0.3);
+    z-index: 10;
 }
 .menu a {
     text-align: center;
