--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -20,15 +20,21 @@ select {
     .labelTable{
     font-size: 14px;
     }
+    .select__container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
     .labelTable{
     font-size: 20px;
     }
 }
-.select__container{
+.select__container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 .select__container select {
     background-color: #0563af;
