--- a/src/components/Weather/Weather.module.css
+++ b/src/components/Weather/Weather.module.css
@@ -57,3 +57,8 @@ img{
     text-align: center;
     border: 1px solid grey;
 }
+@media screen and (max-width: 540px) {
+    .invisible_smallscreen {
+        display: none;
+    }
+}
